--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: vbranco <marvin@le-101.fr>                 +:+   +:    +:    +:+      #
 #                                                  #+#   #+    #+    #+#       #
 #    Created: 2017/11/23 16:47:01 by vbranco      #+#   ##    ##    #+#        #
-#    Updated: 2017/11/28 18:59:07 by vbranco     ###    #+. /#+    ###.fr      #
+#    Updated: 2018/05/19 16:39:12 by vbranco     ###    #+. /#+    ###.fr      #
 #                                                          /                   #
 #                                                         /                    #
 # **************************************************************************** #
@@ -28,7 +28,7 @@ SRCS	 = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memmove.c \
 	   ft_putendl_fd.c ft_putnbr_fd.c ft_lstnew.c ft_lstdelone.c \
 	   ft_lstdel.c ft_lstadd.c ft_lstiter.c ft_lstmap.c \
 	   ft_isblank.c ft_isupper.c ft_isxdigit.c ft_isspace.c ft_islower.c \
-	   ft_size_nb.c ft_reverse.c ft_count_words.c ft_realloc.c
+	   ft_size_nb.c ft_reverse.c ft_count_words.c ft_realloc.c get_next_line.c
 
 OBJ 	= $(addprefix build/, $(SRCS:.c=.o))
 
